--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -13,6 +13,8 @@ html, body {
   padding: 0;
   font-family: 'Hind', sans-serif;
   color: #242424;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .no-scroll {
@@ -23,11 +25,13 @@ h1 {
   margin: 0px 0 10px 0;
   font-size: 60px;
   font-family: 'Raleway', sans-serif;
+  font-weight: 500;
 }
 h1.subtitle {
   margin-top: -15px;
   font-size: 19.8px;
   color: #474747;
+  font-weight: 400;
 }
 
 h3 {
@@ -68,6 +72,7 @@ button {
   transition: 0.4s;
   border: 1px solid black;
   cursor: pointer;
+  background: transparent;
 }
 
 button:hover {
@@ -84,8 +89,10 @@ button:hover {
 
 /* Total center styles */
 .full-page {
-  height: 100vh;
+  height: 100%;
   width: 100%;
+  margin-bottom: 0px !important;
+  padding-bottom: 0px !important;
   display: inline-flex;
   flex-wrap: wrap;
 }
@@ -98,5 +105,25 @@ button:hover {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  /*background: ghostwhite;*/
+}
+
+.grid-bg {
+  background-image: url('../assets/Square-Grid-Black.png');
+  background-size: cover !important;
+  position: absolute;
+  z-index: -90;
+  height: 100vh;
+  width: 100vw;
+}
+
+.gradient-bg {
+  position: absolute;
+  z-index: -100;
+  height: 100vh;
+  width: 100vw;
+  background: #ffffff; /* Old browsers */
+  background: -moz-linear-gradient(-180deg, #ffffff 0%, #b7b7b7 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(-180deg, #ffffff 0%,#b7b7b7 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(-180deg, #ffffff 0%,#b7b7b7 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#b7b7b7',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
